fix: add spacing to bio

--- a/src/components/Bio/Bio.module.css
+++ b/src/components/Bio/Bio.module.css
@@ -1,6 +1,7 @@
 .bio {
     display: flex;
     margin: 2.5rem 0;
+    padding: 16px 0;
     justify-content: center;
 }
 
